--- a/appsettings.json
+++ b/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "AllowedHosts": "*",
-   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=TodoApp;Trusted_Connection=True;MultipleActiveResultSets=true"
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=TodoApp;User Id=sa;Password=yourStrong(!)Password;TrustServerCertificate=True;"
   }
 }
