--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=TodoApp;User Id=sa;Password=yourStrong(!)Password;TrustServerCertificate=True;"
+    "DefaultConnection": "Host=;Database=TodoApp;Username=postgres;Password="
   }
 }
